Fix th and td selectors that override the attribute 'align'

--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -81,4 +81,5 @@ table
 td,
 th
   padding: 0
-  text-align: left
+  &:not([align])
+    text-align: left
