--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -53,7 +53,8 @@ $table-striped-row-even-hover-background-color: $white-ter !default
         color: currentColor
   th
     color: $table-cell-heading-color
-    text-align: left
+    &:not([align])
+      text-align: left
   tr
     &.is-selected
       background-color: $table-row-active-background-color
